# experiment_project

./: .gitignore  README.md  env_secret_config.yaml  pyproject.toml  requirements.txt  setup.py
audio/: pandas_ai_example.ipynb
cache/: cache_db_0.10.db
configs/: text_to_kg.yaml
configs/model/: openai.yaml
configs/neo4j/: default.yaml
configs/project/: text_to_kg.yaml
delivery/text_to_kg/: complete_text_to_kg.ipynb  complete_text_to_kg.py  dspy_kg_retrieve.ipynb
doc/: 注册和运行mastodon机器人.md
doc/attachment/: 2024年1季度营养门诊工作总结与计划.doc
doc/任务安排/: kg_task.md  总任务.md
dspy/: BootstrapFewShot_example.ipynb  hotpotqa_with_assertions.ipynb
dspy/backup/: optimized_cot.json
dspy/presentation/: 01_signature.ipynb  02_str_to_kg.py
dspy_module/: agent_module.py
experiment_project/: text_to_kg.py
experiment_project/audio/: autogen_requ_analysis.py  crewai.ipynb  ecommerce_agent.yml  ecommerce_agent_new.yml  langchain_example.ipynb  pandas_ai_example.ipynb  product_analyst.yml  requirement_analyst.yml  run_task.py  solution_reviewer.yaml
experiment_project/autogen/: autogen_clendar.py  example.py  example_03.py  groupchat_hospital_example.py
experiment_project/dspy/: BootstrapFewShot_example.ipynb  example.ipynb  example.py  financial_data_text_to_sql.ipynb  hotpotqa_with_assertions.ipynb  test_example.ipynb
experiment_project/dspy_module/: agent_module.py  agent_signature.py
experiment_project/experiment/: calendar.py  calendar_example.py  func_tool_example.py
experiment_project/text_to_kg/: complete_text_to_kg.ipynb  (+7 more)
text_to_vector/: demo.py
(+922 files in other folders)
