#[tool.poetry]
#name = "AIVerse"
#version = "0.1.1.dev0"
#description = ""
#authors = ["inboc-dev"]
#readme = "README.md"
#
#[tool.poetry.dependencies]
#python = "3.10.12"
#sphinx = "^7.2.6"
#sphinx-rtd-theme = "^2.0.0"
#
#[tool.poetry.group.base-tools.dependencies]
#pytest = ""

#[tool.poetry.group.config.dependencies]
#hydra-core = "^1.3.2"
#hydra-colorlog = "^1.2.0"
#hydra-optuna-sweeper = "^1.2.0"
#
#[tool.poetry.group.matrix.dependencies]
#matrix-nio = "^0.24.0"
#simplematrixbotlib = "^2.11.0"
#
#[tool.poetry.group.distribute.dependencies]
#ray = {extras = ["default", "server"], version = "^2.9.3"}
#
#
#[tool.poetry.group.distribute.dependencies]
#openai = {version = "^1.14.2"}
#
#[tool.poetry.group.deploy.dependencies]
#ansible = {version = "^9.3.0"}
#
#[build-system]
#requires = ["poetry-core"]
#build-backend = "poetry.core.masonry.api"
